--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,11 +1,16 @@
-@media screen and (max-width:576px) {
+@media screen and (max-width: 576px) {
     .navbar-content {
-        flex-direction: column;
-        gap: 1rem;
+      flex-direction: column;
+      gap: 1rem;
     }
     .navbar-right {
-        flex-direction: column;
-        align-items: center;
-        gap: 2rem;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
     }
-}
+    .header-content {
+      flex-direction: column-reverse;
+      gap: 4rem;
+    }
+  }
+  
