--- a/style/style.css
+++ b/style/style.css
@@ -68,3 +68,75 @@ nav {
   background: rgba(11, 2, 35, 0.1);
 }
 /* navbar section end */
+
+/* header section  */
+header {
+  width: 100%;
+  background-image: url("../images/Group\ 14.png");
+  background-repeat: no-repeat;
+  margin-bottom: 4rem;
+}
+.header-content {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-left,
+.header-right {
+  width: 90%;
+}
+.header-left h2 {
+  color: rgb(11, 2, 35);
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 56px;
+  margin-bottom: 0.1rem;
+}
+.header-left h1 {
+  font-size: 6rem;
+  font-weight: 800;
+  margin-bottom: 0.1rem;
+  background: linear-gradient(180deg, rgb(249, 72, 178), rgb(135, 88, 241));
+  background-clip: text;
+  color: transparent;
+}
+.header-left p {
+  color: rgb(83, 76, 100);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 23px;
+  margin-bottom: 0.1rem;
+}
+.header-left button {
+  margin-top: 1rem;
+}
+.primary-btn {
+  padding: 1rem 2rem;
+  border-radius: 48px;
+  background: linear-gradient(
+    90deg,
+    rgb(255, 66, 165) 13.134%,
+    rgb(255, 66, 165) 87.942%
+  );
+  border: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.rogue-btn {
+  padding: 1rem 2rem;
+  border-radius: 48px;
+  background: rgb(78, 197, 247);
+  border: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-left: 0.6rem;
+}
+.header-right img {
+  width: 100%;
+}
+/* header section end */
